# django-confetti

./: MANIFEST.in  README.md  install_to_pip.sh  pyproject.toml  pytest.ini  requirements.txt
confetti/: __init__.py  admin.py  api.py  apps.py  conf.py  defaults.py  models.py  openapi.py  responses.py  seed.py  serializers.py  services.py  signals.py  swagger_compat.py  urls.py  validators.py  views.py
confetti/management/commands/: confetti_seed.py  confetti_sync.py
confetti/migrations/: 0001_initial.py  0002_alter_settingdefinition_choices_and_more.py  0002_settingssnapshot_alter_settingdefinition_choices_and_more.py  0003_alter_settingcategory_options_and_more.py  0003_settingssnapshot_alter_settingdefinition_choices_and_more.py
core/: settings.py  urls.py
tests/: conftest.py  test_admin.py  test_api_core.py  test_boolean_default_sync.py  test_responses.py  test_rest_endpoints.py  test_seed.py  test_signals_cache.py  test_snapshots.py  test_swagger_compat.py  urls.py
